[tool.poetry]
name = "covid-service"
version = "0.1.0"
description = ""
authors = ["matifonseca <matias.fonseca@mercadolibre.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
coverage = "^5.5"
datadog = "^0.41.0"
coveralls = "^3.2.0"
mongoengine = "^0.23.1"
pymongo = {extras = ["srv"], version = "^3.12.0"}
mongomock = "^3.23.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
